# pyod

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGES.txt  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  README_11262018.rst  Requirements.txt  TODO.txt  appveyor.yml  beta_vae_torch.py  dev.py  environment.yml  example.py  kde_example.py  pypi_build_commands.txt  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_travis.txt  setup.cfg  setup.py  temp_text.txt
.circleci/: config.backup  config.yml
.github/workflows/: codeql.yml  testing-cron.yml  testing.yml
data/: arrhythmia.mat  load_data.py
docs/: Makefile  README_11262018.md  about.rst  api.rst  api_cc.rst  benchmark.rst  build.bat  build.sh  command.txt  conf.py  example.rst  examples.rst  faq.rst  fast_train.rst  impact.rst  index.rst  install.rst  issues.rst  make.bat  model_persistence.rst  modules.rst  pubs.rst  pyod.ad_engine.rst  pyod.models.embedding.rst  pyod.models.graph.rst  pyod.models.rst  pyod.models.tabular.rst  pyod.models.timeseries.rst  pyod.rst  pyod.test.rst  pyod.utils.rst  rebuild.bat  refs.bib  relevant_knowledge.rst  requirements.txt  skill_maintenance.rst  thresholding.rst  todo.rst  v3.3-backlog.md  zreferences.bib
docs/examples/: adengine.rst  agentic.rst  combination.rst  embedding.rst  graph.rst  index.rst  tabular.rst  thresholding.rst  timeseries.rst
docs/tables/: prc.csv  roc.csv  time.csv
examples/: README.md  abod_example.py  ad_engine_example.py  ae1svm_example.py  agentic_demo.html  agentic_example.py  alad_example.py  alocc_example.py  anogan_example.py  auto_encoder_example.py  auto_encoder_torch_example.py  cblof_example.py  cd_example.py  cof_example.py  comb_example.py  compare_all_models.py  copod_example.py  copod_interpretability.py  copod_parallel_example.py  deepsvdd_example.py  devnet_example.py  dif_example.py  ecod_example.py  embedding_od_example.py  example.py  feat_bagging_example.py  feature_bagging_example.py  generate_data_categorical_example.py  generate_data_cluster_example.py  gmm_example.py  hbos_categorical_example.py  hbos_example.py  hdbscan_example.py  iforest_example.py  inne_example.py  investigate_example.py  kde_example.py  knn_example.py  knn_interpretability.py  knn_mahalanobis_example.py  (+48 more)
examples/auto_model_selection_example/: Hyperparameter_Configuration.csv  auto_selection.ipynb  model_info_summarizer.ipynb  prn_df.csv  readme.md  result_with_baseline.csv  roc_df.csv  time_df.csv  updated_dataset_information.csv
examples/data/: arrhythmia.csv  cardio.csv  glass.csv  ionosphere.csv  ionosphere.mat  letter.csv  lympho.csv  mat_file_conversion.py  musk.csv  optdigits.csv  pendigits.csv  pima.csv  satellite.csv  satimage-2.csv  shuttle.csv  vertebral.csv  vowels.csv  wbc.csv
examples/example_data/: cardio.mat
examples/temp_do_not_use/: deprecated_functions.py  fit_predict_verification.py
models/: abod.py  combination.py  glosh.py  hbos.py  knn.py  lof.py  utility.py
notebooks/: Benchmark.ipynb  Compare All Models.ipynb  Model Combination.ipynb  benchmark.py  prc.csv  roc.csv  time.csv
notebooks/data/: README.md  annthyroid.mat  breastw.mat  ecoli.mat  lympho.mat  mnist.mat  musk.mat  optdigits.mat  pendigits.mat  satellite.mat  satimage-2.mat  shuttle.mat  smtp.mat  thyroid.mat  vertebral.mat
pyador/: local.py  pyador.py
pyador/tests/: test_pyador.py
pyador/util/: data_prep.py
pyod/: __init__.py  cli.py  mcp_server.py  version.py
pyod/data/: load_data.py  mammography.mat
pyod/examples/: README.md  abod_example.py  comb_example.py  hbos_example.py  knn_example.py
pyod/models/: __init__.py  _pyg_utils.py  _ts_utils.py  abod.py  ae1svm.py  alad.py  alocc.py  anogan.py  auto_encoder.py  auto_encoder_torch.py  base.py  base_dl.py  cblof.py  cd.py  cof.py  combination.py  copod.py  deep_svdd.py  deep_svdd_torch.py  devnet.py  dif.py  ecod.py  embedding.py  feat_bagging.py  feature_bagging.py  gaal_base.py  gaal_base_torch.py  glosh.py  gmm.py  hbos.py  hdbscan.py  iforest.py  inne.py  kde.py  knn.py  kpca.py  lmdd.py  loci.py  loda.py  lof.py  (+39 more)
pyod/pyador/: README.md  plot.py
pyod/skills/: __init__.py
pyod/test/: conftest.py  test_abod.py  test_ad_engine.py  test_ad_engine_v3.py  test_ae1svm.py  test_alad.py  test_alocc.py  test_anogan.py  test_auto_encoder.py  test_auto_encoder_torch.py  test_auto_model_selector.py  test_base.py  test_base_dl.py  test_cblof.py  test_cd.py  test_cli.py  test_cof.py  test_combination.py  test_copod.py  test_copod_parallel.py  test_data.py  test_deepsvdd.py  test_devnet,py  test_devnet.py  test_dif.py  test_ecod.py  test_ecod_parallel.py  test_embedding.py  test_encoders.py  test_feat_bagging.py  test_feature_bagging.py  test_gmm.py  (+61 more)
scripts/: regen_skill.py  render_agentic_demo.py
utility/: load_data.py  stat_models.py  utility.py
(+62 files in other folders)
